# Agentic_Socratic_NLP_Tutor-final

./: .env.example  .gitignore  DOCUMENTATION.md  LICENSE  QUICK_START.md  README.md  SUPABASE_SETUP.md  THE_JOURNEY.md  requirements.txt
agentic_socratic_nlp_tutor/: README.md  pyproject.toml
agentic_socratic_nlp_tutor/knowledge/: user_progress.json
agentic_socratic_nlp_tutor/src/agentic_socratic_nlp_tutor/: background_analysis.py  background_sync.py  difficulty_adapter.py  knowledge_graph.py  onboarding_state.py  onboarding_summary_generator.py  planning_crew.py  response_cache.py  response_strength_scorer.py  session_manager.py  session_state.py  socratic_tutor.py  user_profile_manager.py
agentic_socratic_nlp_tutor/src/agentic_socratic_nlp_tutor/config/: agents.yaml  tasks.yaml
agentic_socratic_nlp_tutor/src/agentic_socratic_nlp_tutor/knowledge/: __init__.py  enhanced_nlp_knowledge_source.py
backend/: README.md  SETUP_INSTRUCTIONS.md  main.py  requirements.txt
backend/lib/: __init__.py  auth.py  logger.py  supabase_client.py
backend/migrations/: add_last_updated_column.sql  add_session_state_fields.sql  add_source_files_column.sql  add_teacher_access_policies.sql  add_user_level_fields.sql  cleanup_unused_tables.sql  create_documents_table.sql  (+3 more)
data/: extracted_topics.json
frontend/: .gitignore  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: evaluate_ragas_eurlex.py  extract_topics_from_rag.py  ingest_gdpr_eurlex.py  supabase_connect_minimal.py  verify_supabase_url.py
src/: ingest_pdfs_enhanced.py
(+27 files in other folders)
